resources/signaller-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: signaller
  name: signaller-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: signaller-web
  template:
    metadata:
      labels:
        app: signaller-web
    spec:
      containers:
        - name: signaller-web
          image: docker.io/khawajaumarfarooq/signaller-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
