resources/signaller-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: signaller
  name: signaller-web
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: signaller-web
  sessionAffinity: None
